# python-cloudmodel

./: .gitattributes  .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-app.yml
fortran-src/: integrators.f90
notebooks/: Cloud model integration - dry.ipynb  Cloud model integration - effect of entrainment.ipynb  Cloud model integration - moist.ipynb  Cloud model integration.ipynb  Multivariable adaptive integration.ipynb
notebooks/unchecked/: Cloud model integration - rain condevap.ipynb  Condensation rate for rising parcel.ipynb  Entrainment contribution terms - moist plume.ipynb  Integration methods.ipynb  Microphysics integration- raind condevap.ipynb  Microphysics integration.ipynb  README.md  Saturation adjustment.ipynb  cloudphysics.f90 re-implementation.ipynb
pyclouds/: .gitignore  Makefile  __init__.py  _version.py  cloud_equations.py  cloud_initiation.py  cloud_microphysics.py  cloudmodel_common.f90  cloudmodel_integration.f90  common.py  constants.py  integration.py  integrators.py  parameterisations.py  plotting.py  reference  spec_conc_eqns.f90  utils.py
pyclouds/dev/: fortran-microphysics.py  fortran_integration_test.py  fortran_isometric-isobaric_integration.py  full-eqns.py  microphysics.py  old_kessler_fortran.py  pseudotime-integration-dry.py  (+1 more)
tests/: _test_finite_adjustment_microphysics.py  _test_fortran_cloudequations.py  _test_um_integration.py  test_LCL.py  test_dry_eqns.py  test_full_eqns.py  test_integration_handler.py  test_notebooks.py  test_plotting.py
(+65 files in other folders)
