[tool.poetry]
name = "pyclouds"
version = "0.2.1"
description = "1D parcel models for convective clouds"
authors = ["Leif Denby <leif@denby.eu>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7,<3.10"
numpy = "^1.12.1"
scipy = "^1.2.0"
matplotlib = "^3.0.0"
xarray = "^0.19.0"
notebook = "^6.4.5"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
